# CartesianPlanner

./: .gitignore  CMakeLists.txt
include/cartesian_planner/: cartesian_planner.h  cartesian_planner_config.h  discretized_trajectory.h  dp_planner.h  vehicle_param.h
include/cartesian_planner/math/: box2d.h  line_segment2d.h  polygon2d.h  vec2d.h
include/cartesian_planner/visualization/: color.h  plot.h
script/: reference_publisher.py
src/: cartesian_planner_node.cpp
src/cartesian_planner/: cartesian_planner.cpp  discretized_trajectory.cpp  dp_planner.cpp  environment.cpp  environment.h  trajectory_nlp.cpp  trajectory_nlp.h  trajectory_optimizer.cpp  trajectory_optimizer.h
src/cartesian_planner/math/: aabox2d.cpp  aabox2d.h  box2d.cpp  line_segment2d.cpp  math_utils.cpp  math_utils.h  polygon2d.cpp  pose.h  vec2d.cpp
src/cartesian_planner/visualization/: color.cpp  plot.cpp
